--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
 
         .stylish-headline .fa-x-twitter {
             margin-left: 10px; /* Space between text and icon */
-            font-size: 1.2em; /* Adjust icon size as needed */
+            font-size: 0.6em; /* Adjust icon size as needed */
             color: #1da1f2; /* Same color as text */
         }
 
@@ -574,9 +574,9 @@
                   <div class="w3-white w3-text-grey w3-card-4">
                     <h2 class="w3-text-grey w3-padding-16"><i class="fas fa-satellite-dish fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Other Roles</h2>
                     <div class="w3-container">
-                      <p><i class="fa fa-bullhorn fa-fw w3-margin-right w3-large w3-text-teal"></i>Member, IEEE CIS Student Committee<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; January 2024 - Present </p>
-                      <p><i class="fa fa-bullhorn fa-fw w3-margin-right w3-large w3-text-teal"></i> Co-Lead, <a href="">Google Developer Club IIEST </a><br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  September 2022 - Feb 2024 </p>
-                      <p><i class="fa fa-bullhorn fa-fw w3-margin-right w3-large w3-text-teal"></i>Chairperson, IEEE CIS IIEST <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Januray 2020 - December 2020</p>
+                      <p><i class="fa fa-bullhorn fa-fw w3-margin-right w3-large w3-text-teal"></i>Member, IEEE CIS Student Committee<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; January 2024 - Present </p>
+                      <p><i class="fa fa-bullhorn fa-fw w3-margin-right w3-large w3-text-teal"></i>Co-Lead, <a href="">Google Developer Club IIEST </a><br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; September 2022 - Feb 2024 </p>
+                      <p><i class="fa fa-bullhorn fa-fw w3-margin-right w3-large w3-text-teal"></i>Chairperson, IEEE CIS IIEST <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Januray 2020 - December 2020</p>
                       <hr>
                     </div>
                   </div><br>
@@ -723,7 +723,7 @@
          <p>Copyright © Anuvab Sen 2024<br>If you would like to know more about my work, then drop me an email at <a href="">asen74@gatech.edu</a></p>
       </footer>
 
-<br>
+
 <h2 class="stylish-headline">
 <p class="centered-icon"><i class="fab fa-twitter"></i> CANADA MOMENTS</p>
 
