--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
       <style>
            html,
            body,
@@ -35,7 +36,8 @@
            text-align: center;
            padding: 14px 16px;
            text-decoration: none;
-           font-size: 17px;
+           font-size: 18px;
+           font-family: 'Times New Roman', Times, serif; /* Times New Roman font */
            }
            /* Change the color of links on hover */
            .topnav a:hover {
@@ -60,19 +62,23 @@
            width: 50%;
            height: 100%;
            }
+
            .collapsible {
-           background-color: white;
-           color: rgb(19, 168, 226);
-           cursor: pointer;
-           padding: 18px;
-           width: 100%;
-           border: none;
-           text-align: left;
-           outline: none;
-           font-size: 25px;
-           font-family: 'Playfair Display', serif; /* Apply classy font */
-           transition: background-color 0.4s, color 0.4s; /* Smooth transition for hover effect */
+               background-color: #f1f1f1;
+               color: black;
+               cursor: pointer;
+               padding: 10px;
+               width: 100%;
+               border: none;
+               text-align: left;
+               outline: none;
+               font-size: 15px;
+               border-radius: 8px;
+               margin-bottom: 3px;
            }
+
+
+
            .active,
            .collapsible:hover {
            background-color: #f9f9f9;
@@ -84,7 +90,7 @@
            font-weight: bold;
            float: right;
            margin-left: 5px;
-           transition: transform 0.4s; /* Smooth transition for icon rotation */
+           transition: transform 0.4s;
            }
            .active:after {
            content: "\2212";
@@ -168,17 +174,18 @@
 
 
 
-          .circular-favicon {
-          width: 32px; /* Set the width of the favicon */
-          height: 32px; /* Set the height of the favicon */
-          border-radius: 50%; /* Make the image circular */
-          overflow: hidden; /* Hide the overflow */
+          .circular-favicon
+          {
+          width: 32px;
+          height: 32px;
+          border-radius: 50%;
+          overflow: hidden;
           }
 
           .circular-favicon img {
-          width: 100%; /* Ensure the image fills the container */
-          height: 100%; /* Ensure the image fills the container */
-          object-fit: cover; /* Cover the entire container */
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
           }
 
 
@@ -264,6 +271,7 @@
             border: 1px solid #ddd; /* Light border */
             border-radius: 5px;
             background-color: #f9f9f9; /* Light background */
+            font-family: 'Times New Roman', Times, serif;
         }
 
         .profile h5 {
@@ -281,7 +289,7 @@
 
         .profile p {
             margin-bottom: 5px;
-            font-size: 14px;
+            font-size: 14.5px;
             color: #666; /* Medium text color */
         }
 
@@ -298,7 +306,7 @@
             border: none;
             text-align: left;
             outline: none;
-            font-size: 25px;
+            font-size: 20px;
             font-family: 'Playfair Display', serif; /* Apply classy font */
             transition: background-color 0.4s,
         }
@@ -382,6 +390,7 @@
             margin-bottom: 5px;
             font-size: 15px;
             color: #666; /* Medium text color */
+            font-family: 'Times New Roman', Times, serif;
         }
 
         .profile2 i.fa {
@@ -398,7 +407,7 @@
 
 
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Times New Roman', Times, serif;
         }
 
         .tweet-container {
@@ -449,12 +458,19 @@
 
 
         .stylish-headline {
-            font-family: 'Arial', sans-serif;
-            font-size: 2em; /* Adjust font size as needed */
-            font-weight: bold;
-            color: #1da1f2; /* Twitter/X blue color */
-            display: flex;
+            text-align: center;
+            margin-top: 20px;
+        }
+
+        .centered-icon {
+            display: inline-flex;
             align-items: center;
+            font-size: 24px;
+            color: #1DA1F2; /* Twitter blue color */
+        }
+
+        .centered-icon i {
+            margin-right: 10px;
         }
 
         .stylish-headline .fa-x-twitter {
@@ -481,6 +497,30 @@
             color: #1da1f2; /* Optional: Twitter blue color */
         }
 
+        .centered-icon .fa-linkedin {
+            font-size: 3em; /* Adjust icon size as needed */
+            color: #1da1f2; /* Optional: Twitter blue color */
+        }
+
+        .centered-icon .fa-instagram {
+            font-size: 3em; /* Adjust icon size as needed */
+            color: #1da1f2; /* Optional: Twitter blue color */
+        }
+
+        .centered-icon .fa-facebook {
+            font-size: 3em; /* Adjust icon size as needed */
+            color: #1da1f2; /* Optional: Twitter blue color */
+        }
+
+        .centered-icon .fa-reddit {
+            font-size: 3em; /* Adjust icon size as needed */
+            color: #1da1f2; /* Optional: Twitter blue color */
+        }
+
+        .centered-icon .fa-outlook {
+            font-size: 3em; /* Adjust icon size as needed */
+            color: #1da1f2; /* Optional: Twitter blue color */
+        }
 
 
 
@@ -632,7 +672,6 @@
          </div>
     </div>
 </div>
-<br>
 
 
 
@@ -641,10 +680,9 @@
                       <div class = "profile2">
                        <p>[Aug. 2024] I started my PhD at Georgia Institute of Technology, Atanta, USA!</p>
                        <p>[July 2024] I completed my graduation at IIEST Shibpur, India!</p>
-                       <p>[Jan 2024] My undergrad thesis got accepted as a workshop paper at IGARSS, Athens, Greece!</p>
+                       <p>[Jan 2024]  My undergrad thesis got accepted as a workshop paper at IGARSS, Athens, Greece!</p>
                 </div>
                </div>
-               <br>
 
                <button class="collapsible">
                    <i class="fa fa-file fa-fw w3-margin-right w3-xxsmall w3-text-blue"></i> CV
@@ -696,7 +734,6 @@
                            <p class="publication-text">Benchmarking Metaheuristic Integrated Quantum Approximate Optimization Algorithm against Quantum Annealing, 11th CSAI Conference, London, Quantum Information Processing [QIP]</p>
                            <a href="#"><i class="fa fa-download fa-fw w3-margin-right w3-text-blue"></i></a>
                        </div>
-                       <!-- Add more journal papers as needed -->
                    </div>
                </div>
 
@@ -727,7 +764,14 @@
 
 
 <h2 class="stylish-headline">
-<p class="centered-icon"><i class="fab fa-twitter"></i> CANADA MOMENTS</p>
+<p class="centered-icon"><i class="fab fa-twitter"></i></p>
+<p class="centered-icon"><i class="fab fa-linkedin"></i></p>
+<p class="centered-icon"><i class="fab fa-instagram"></i></p>
+<p class="centered-icon"><i class="fab fa-facebook"></i></p>
+<p class="centered-icon"><i class="fab fa-reddit"></i></p>
+<p class="centered-icon"><i class="fab fa-outlook"></i></p>
+<br>
+<p class="centered-icon"><i class="fab fa-twitr">CANADA MOMENTS - NIAGRA FALLS [22 MAY, 2024], BANFF NATIONAL PARK [25TH JULY]</i></p>
 </h2>
 
 <div class="tweet-container">
