--- a/index.html
+++ b/index.html
@@ -188,6 +188,10 @@
           object-fit: cover;
           }
 
+          p {
+              font-size: 15px;
+          }
+
 
 
 
@@ -769,7 +773,7 @@
 <p class="centered-icon"><i class="fab fa-instagram"></i></p>
 <p class="centered-icon"><i class="fab fa-facebook"></i></p>
 <br>
-<p class="centered-icon"><i class="fab fa-twitr">CANADA MOMENTS - NIAGRA FALLS, BANFF NATIONAL PARK [25TH JULY]</i></p>
+<p class="centered-icon"><i class="fab fa-twitr">CANADA MOMENTS - NIAGRA FALLS, BANFF NATIONAL PARK/i></p>
 </h2>
 
 <div class="tweet-container">
