--- a/index.html
+++ b/index.html
@@ -618,8 +618,8 @@
                   <div class="w3-white w3-text-grey w3-card-4">
                     <h2 class="w3-text-grey w3-padding-16"><i class="fas fa-satellite-dish fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Other Roles</h2>
                     <div class="w3-container">
-                      <p><i class="fa fa-bullhorn fa-fw w3-margin-right w3-large w3-text-teal"></i>Member, IEEE CIS Student Committee<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; January 2024 - Present </p>
-                      <p><i class="fa fa-bullhorn fa-fw w3-margin-right w3-large w3-text-teal"></i>Co-Lead, <a href="">Google Developer Club</a><br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; September 2022 - Feb 2024 </p>
+                      <p><i class="fa fa-bullhorn fa-fw w3-margin-right w3-large w3-text-teal"></i>Member,IEEE CIS Student Committee<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; January 2024 - Present </p>
+                      <p><i class="fa fa-bullhorn fa-fw w3-margin-right w3-large w3-text-teal"></i>Co-Lead, <a href="">Google Developer Club IIEST</a><br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; September 2022 - Feb 2024 </p>
                       <p><i class="fa fa-bullhorn fa-fw w3-margin-right w3-large w3-text-teal"></i>Chairperson, IEEE CIS IIEST <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Januray 2020 - December 2020</p>
                       <hr>
                     </div>
