--- a/index.html
+++ b/index.html
@@ -39,21 +39,25 @@
            font-size: 18px;
            font-family: 'Times New Roman', Times, serif; /* Times New Roman font */
            }
+
            /* Change the color of links on hover */
            .topnav a:hover {
            background-color: #ddd;
            color: black;
            }
+
            /* Add a color to the active/current link */
            .topnav a.active {
            background-color: rgb(19, 168, 226);
            color: white;
            }
+
            .topnav-right {
            float: right;
            background-color: rgb(19, 168, 226);
            color: black;
            }
+
            .responsive-iframe {
            top: 0;
            left: 0;
@@ -77,13 +81,12 @@
                margin-bottom: 3px;
            }
 
-
-
            .active,
            .collapsible:hover {
            background-color: #f9f9f9;
            color: #007BFF;
            }
+
            .collapsible:after {
            content: '\002B';
            color: rgb(19, 168, 226);
@@ -92,12 +95,15 @@
            margin-left: 5px;
            transition: transform 0.4s;
            }
+
            .active:after {
            content: "\2212";
            }
+
            .collapsible:hover:after {
            transform: rotate(90deg); /* Rotate icon on hover */
            }
+
            .content {
            padding: 0 18px;
            max-height: 0;
@@ -105,6 +111,7 @@
            transition: max-height 0.2s ease-out;
            background-color: #f1f1f1;
            }
+
            .example1 {
            width: 98%;
            background: white;
@@ -263,13 +270,9 @@
             margin-bottom: 20px;
         }
 
-
-
-
-
-
         /* Basic styling for work experience items */
         .profile {
+            margin-top: 0px;
             padding: 20px;
             margin-bottom: 20px;
             border: 1px solid #ddd; /* Light border */
@@ -357,15 +360,6 @@
             width: 20px;
         }
 
-
-
-
-
-
-
-
-
-
         /* Basic styling for work experience items */
         .profile2 {
             padding: 20px;
@@ -401,16 +395,8 @@
             width: 20px;
         }
 
-
-
-
-
-
-
-
-
-
-        body {
+        body
+        {
             font-family: 'Times New Roman', Times, serif;
         }
 
@@ -419,7 +405,8 @@
             flex-wrap: wrap;
             justify-content: space-around;
             gap: 20px;
-            margin-top: 20px;
+            margin-left: 71px;
+            margin-right: 71px
         }
 
         .tweet-box {
@@ -463,13 +450,13 @@
 
         .stylish-headline {
             text-align: center;
-            margin-top: 20px;
+            margin-top:0px;
         }
 
         .centered-icon {
             display: inline-flex;
             align-items: center;
-            font-size: 24px;
+            font-size: 16px;
             color: #1DA1F2; /* Twitter blue color */
         }
 
@@ -479,7 +466,7 @@
 
         .stylish-headline .fa-x-twitter {
             margin-left: 10px; /* Space between text and icon */
-            font-size: 0.6em; /* Adjust icon size as needed */
+            font-size: 0.1em; /* Adjust icon size as needed */
             color: #1da1f2; /* Same color as text */
         }
 
@@ -533,6 +520,99 @@
 
 
 
+
+
+        .slider {
+            margin-top: 18px;
+            max-width: 1200px; /* Increased max-width */
+            width: 100%; /* Ensures it takes full width */
+            height: 715px; /* Increased height */
+            position: relative;
+            overflow: hidden;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            flex: 1 1 calc(33.33% - 20px);
+        }
+
+        .slides {
+            display: flex;
+            width: 100%; /* Ensure slides take full width */
+            transition: transform 0.5s ease-in-out;
+        }
+
+        .slides img {
+            width: 100%; /* Ensure images take full width of slides */
+            height: 100%;
+            height: 715px; /* Ensure images take full height of slides */
+            object-fit: cover; /* Maintain aspect ratio */
+            border-radius: 10px;
+        }
+
+        .navigation {
+            position: absolute;
+            top: 50%;
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            transform: translateY(-50%);
+        }
+
+        .navigation button {
+            background-color: rgba(0, 0, 0, 0.5);
+            border: none;
+            color: white;
+            font-size: 18px;
+            cursor: pointer;
+            padding: 10px;
+            border-radius: 50%;
+        }
+
+        .navigation button:hover {
+            background-color: rgba(0, 0, 0, 0.8);
+        }
+
+
+
+
+
+
+        .headline {
+            font-family: 'Times New Roman', Times, serif;
+            font-size: 24px;
+            color: #191919;
+            margin: 20px 0;
+            text-align: left; /* Aligns text to the left */
+            margin-left: 68px;
+        }
+
+        .icon-text {
+            display: flex;
+            align-items: center;
+            font-size: 30px;
+            margin-top: 0px;
+            margin-bottom: 0px;
+            margin: 0; /* Remove default margin */
+        }
+
+        .icon-text i {
+            font-size: 24px; /* Adjust icon size */
+            margin-right: 10px; /* Space between icon and text */
+            color: #1DA1F2; /* Twitter brand color */
+        }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
         </style>
 
       <style type="text/css">
@@ -553,22 +633,22 @@
 
    <body class="w3-light-grey" data-scholarcy-content-script-executed="1">
       <div class="topnav">
-         <a class="active" id="sec1" href="#home">Home</a>
+         <a class="active" id="sec1" href="#home"><strong>Home</strong></a>
          <a id="sec4" href="" style="color: white; text-decoration: none;">
              <!-- Using a newspaper icon as an example -->
-             <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 24 24">
+             <svg xmlns="http://www.w3.org/2000/svg" width="26" height="27" viewBox="0 0 24 24">
                  <path fill="white" d="M5 2v18h14v-2h-12v-16h-2zm13 15h-12v-12h12v12zm-6-3.5h-6v-1h6v1zm4-3h-10v-1h10v1zm0-3h-10v-1h10v1z"/>
              </svg>
          </a>
          <a id="sec5" href="" style="color: white; text-decoration: none;">
              <!-- Using a portfolio icon as an example -->
-             <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 24 24" style="fill: white;">
+             <svg xmlns="http://www.w3.org/2000/svg" width="26" height="27" viewBox="0 0 24 24" style="fill: white;">
                  <path d="M21 3h-18c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h18c1.1 0 2-.9 2-2v-14c0-1.1-.9-2-2-2zm-3 14h-12v-10h12v10zm-10-8h2v2h-2v-2zm4 0h2v2h-2v-2z"/>
              </svg>
          </a>
          <a id="sec3" href="" style="color: white; text-decoration: none;">
              <!-- Using an airplane icon as an example -->
-             <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 24 24" style="fill: white;">
+             <svg xmlns="http://www.w3.org/2000/svg" width="26" height="27" viewBox="0 0 24 24" style="fill: white;">
                  <path d="M13.5 10.5l-6-6-1.5 1.5 4.5 4.5-4.5 4.5 1.5 1.5 6-6v3h3v-6h-3v3z"/>
              </svg>
          </a>
@@ -741,12 +821,25 @@
                    </div>
                </div>
 
-
                </div>
 
 
 
 
+
+               <div class="w3-twothird">
+               <div class="slider">
+                   <div class="slides">
+                       <img src="image/1.jpg" alt="Image 1">
+                       <img src="image/2.jpeg" alt="Image 2">
+                       <img src="image/3.jpg" alt="Image 3">
+                   </div>
+                   <div class="navigation">
+                       <button id="prev">❮</button>
+                       <button id="next">❯</button>
+                   </div>
+               </div>
+             </div>
 
 
 
@@ -757,24 +850,33 @@
                   </div>
                </div>
             </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
             <!-- End Right Column -->
          </div>
          <!-- End Grid -->
       </div>
       <!-- End Page Container -->
-      <footer class="w3-container w3-blue w3-center w3-margin-top">
-         <p>Copyright © Anuvab Sen 2024<br>If you would like to know more about my work, then drop me an email at <a href="">asen74@gatech.edu</a></p>
-      </footer>
 
 
-<h2 class="stylish-headline">
-<p class="centered-icon"><i class="fab fa-twitter"></i></p>
-<p class="centered-icon"><i class="fab fa-linkedin"></i></p>
-<p class="centered-icon"><i class="fab fa-instagram"></i></p>
-<p class="centered-icon"><i class="fab fa-facebook"></i></p>
-<br>
-<p class="centered-icon"><i class="fab fa-twitr">CANADA MOMENTS, NIAGRA FALLS, BANFF NATIONAL PARK [CA]</i></p>
-</h2>
+      <h2 class="headline">
+          <p class="icon-text" align="left"><i class="fa-brands fa-x-twitter"></i></p>
+      </h2>
 
 <div class="tweet-container">
     <div class="tweet-box">
@@ -790,6 +892,19 @@
         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
 </div>
+
+<footer class="w3-container w3-blue w3-center w3-margin-top">
+   <p>Copyright © Anuvab Sen 2024<br>If you would like to know more about my work, then drop me an email at <a href="">asen74@gatech.edu</a></p>
+</footer>
+
+
+
+<h2 class="stylish-headline">
+<p class="centered-icon"><i class="fab fa-twitter"></i></p>
+<p class="centered-icon"><i class="fab fa-linkedin"></i></p>
+<p class="centered-icon"><i class="fab fa-instagram"></i></p>
+<p class="centered-icon"><i class="fab fa-facebook"></i></p>
+</h2>
 
 
 
@@ -813,6 +928,43 @@
            });
          }
       </script>
+
+
+
+
+
+
+
+<script>
+    const slides = document.querySelector('.slides');
+    const images = document.querySelectorAll('.slides img');
+    const prevBtn = document.getElementById('prev');
+    const nextBtn = document.getElementById('next');
+
+    let currentIndex = 0;
+
+    function updateSlider() {
+        slides.style.transform = `translateX(${-currentIndex * 100}%)`;
+    }
+
+    nextBtn.addEventListener('click', () => {
+        currentIndex = (currentIndex + 1) % images.length;
+        updateSlider();
+    });
+
+    prevBtn.addEventListener('click', () => {
+        currentIndex = (currentIndex - 1 + images.length) % images.length;
+        updateSlider();
+    });
+</script>
+
+<script src="https://kit.fontawesome.com/63c99c920d.js" crossorigin="anonymous"></script>
+
+
+
+
+
+
       <div id="loom-companion-mv3" ext-id="liecbddmkiiihnedobmlmillhodjkdmb">
          <section id="shadow-host-companion"></section>
       </div>
