--- a/index.html
+++ b/index.html
@@ -405,8 +405,8 @@
             flex-wrap: wrap;
             justify-content: space-around;
             gap: 20px;
-            margin-left: 71px;
-            margin-right: 71px
+            margin-left: 10px;
+            margin-right: 10px;
         }
 
         .tweet-box {
@@ -437,15 +437,6 @@
                 flex: 1 1 100%; /* Full width on small screens */
             }
         }
-
-
-
-
-
-
-
-
-
 
 
         .stylish-headline {
@@ -633,7 +624,7 @@
 
    <body class="w3-light-grey" data-scholarcy-content-script-executed="1">
       <div class="topnav">
-         <a class="active" id="sec1" href="#home"><strong>Home</strong></a>
+         <a class="active" id="sec1" href="#home">Home</a>
          <a id="sec4" href="" style="color: white; text-decoration: none;">
              <!-- Using a newspaper icon as an example -->
              <svg xmlns="http://www.w3.org/2000/svg" width="26" height="27" viewBox="0 0 24 24">
@@ -698,7 +689,7 @@
                   <div class="w3-white w3-text-grey w3-card-4">
                     <h2 class="w3-text-grey w3-padding-16"><i class="fas fa-satellite-dish fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Other Roles</h2>
                     <div class="w3-container">
-                      <p><i class="fa fa-bullhorn fa-fw w3-margin-right w3-large w3-text-teal"></i>Member, IEEE,CIS Student Committee<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; January 2024 - Present </p>
+                      <p><i class="fa fa-bullhorn fa-fw w3-margin-right w3-large w3-text-teal"></i>Member, IEEE, CIS Committee<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; January 2024 - Present </p>
                       <p><i class="fa fa-bullhorn fa-fw w3-margin-right w3-large w3-text-teal"></i>Co-Lead, <a href="">Google Developer Club</a><br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; September 2022 - Feb 2024 </p>
                       <p><i class="fa fa-bullhorn fa-fw w3-margin-right w3-large w3-text-teal"></i>Chairperson, IEEE CIS IIEST <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Januray 2020 - December 2020</p>
                       <hr>
@@ -846,6 +837,20 @@
 
                         <br>
                       </div>
+                      <div class="tweet-container">
+                          <div class="tweet-box">
+                              <blockquote class="twitter-tweet">
+                                  <p lang="en" dir="ltr">Banff National Park, Alberta<br>Summer 2023 💜 <a href="https://t.co/E1utfOMijA">pic.twitter.com/E1utfOMijA</a></p>&mdash; Anuvab Sen (@AnuvabSen10) <a href="https://twitter.com/AnuvabSen10/status/1774844353078513684?ref_src=twsrc%5Etfw">April 1, 2024</a>
+                              </blockquote>
+                              <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                          </div>
+                          <div class="tweet-box">
+                              <blockquote class="twitter-tweet">
+                                  <p lang="en" dir="ltr">Niagara Falls on a Saturday is all I crave for😁 <a href="https://t.co/1vrjdFoxx9">pic.twitter.com/1vrjdFoxx9</a></p>&mdash; Anuvab Sen (@AnuvabSen10) <a href="https://twitter.com/AnuvabSen10/status/1677805797563088896?ref_src=twsrc%5Etfw">July 8, 2023</a>
+                              </blockquote>
+                              <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                          </div>
+                      </div>
                      </div>
                   </div>
                </div>
@@ -872,26 +877,6 @@
          <!-- End Grid -->
       </div>
       <!-- End Page Container -->
-
-
-      <h2 class="headline">
-          <p class="icon-text" align="left"><i class="fa-brands fa-x-twitter"></i></p>
-      </h2>
-
-<div class="tweet-container">
-    <div class="tweet-box">
-        <blockquote class="twitter-tweet">
-            <p lang="en" dir="ltr">Banff National Park, Alberta<br>Summer 2023 💜 <a href="https://t.co/E1utfOMijA">pic.twitter.com/E1utfOMijA</a></p>&mdash; Anuvab Sen (@AnuvabSen10) <a href="https://twitter.com/AnuvabSen10/status/1774844353078513684?ref_src=twsrc%5Etfw">April 1, 2024</a>
-        </blockquote>
-        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-    </div>
-    <div class="tweet-box">
-        <blockquote class="twitter-tweet">
-            <p lang="en" dir="ltr">Niagara Falls on a Saturday is all I crave for😁 <a href="https://t.co/1vrjdFoxx9">pic.twitter.com/1vrjdFoxx9</a></p>&mdash; Anuvab Sen (@AnuvabSen10) <a href="https://twitter.com/AnuvabSen10/status/1677805797563088896?ref_src=twsrc%5Etfw">July 8, 2023</a>
-        </blockquote>
-        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-    </div>
-</div>
 
 <footer class="w3-container w3-blue w3-center w3-margin-top">
    <p>Copyright © Anuvab Sen 2024<br>If you would like to know more about my work, then drop me an email at <a href="">asen74@gatech.edu</a></p>
