--- a/index.html
+++ b/index.html
@@ -407,6 +407,7 @@
             gap: 20px;
             margin-left: 10px;
             margin-right: 10px;
+            margin-top: 10px;
         }
 
         .tweet-box {
@@ -513,11 +514,12 @@
 
 
 
+        /* Base Styles */
         .slider {
             margin-top: 18px;
-            max-width: 1200px; /* Increased max-width */
-            width: 100%; /* Ensures it takes full width */
-            height: 715px; /* Increased height */
+            max-width: 1200px;
+            width: 100%;
+            height: 715px;
             position: relative;
             overflow: hidden;
             border-radius: 10px;
@@ -527,15 +529,14 @@
 
         .slides {
             display: flex;
-            width: 100%; /* Ensure slides take full width */
+            width: 100%;
             transition: transform 0.5s ease-in-out;
         }
 
         .slides img {
-            width: 100%; /* Ensure images take full width of slides */
+            width: 100%;
             height: 100%;
-            height: 715px; /* Ensure images take full height of slides */
-            object-fit: cover; /* Maintain aspect ratio */
+            object-fit: cover; /* Ensures images cover the entire slider */
             border-radius: 10px;
         }
 
@@ -561,6 +562,39 @@
         .navigation button:hover {
             background-color: rgba(0, 0, 0, 0.8);
         }
+
+        /* Responsive Styles */
+        @media (max-width: 768px) {
+            .slider {
+                height: 500px; /* Adjust height for tablets and small screens */
+            }
+
+            .slides img {
+                height: 500px; /* Adjust image height accordingly */
+            }
+
+            .navigation button {
+                font-size: 16px;
+                padding: 8px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .slider {
+                height: 300px; /* Adjust height for smartphones */
+            }
+
+            .slides img {
+                height: 300px; /* Adjust image height accordingly */
+            }
+
+            .navigation button {
+                font-size: 14px;
+                padding: 6px;
+            }
+        }
+
+
 
 
 
