--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
            color: white;
            }
 
+           .topnav-left{
+             float: left;
+             background-color: rgb(19, 168, 226);
+             color: black;
+           }
+
            .topnav-right {
            float: right;
            background-color: rgb(19, 168, 226);
@@ -66,6 +72,24 @@
            width: 50%;
            height: 100%;
            }
+           
+            .topnav svg {
+                vertical-align: middle;
+                transition: transform 0.3s ease-out; /* Animation for transform */
+            }
+
+            .topnav a.refresh:hover svg {
+                animation: rotate 1s infinite linear; /* Example of rotating animation */
+            }
+
+            @keyframes rotate {
+                from {
+                    transform: rotate(0deg);
+                }
+                to {
+                    transform: rotate(360deg);
+                }
+            }
 
            .collapsible {
                background-color: #f1f1f1;
@@ -406,8 +430,8 @@
             justify-content: space-around;
             gap: 20px;
             margin-left: 10px;
-            margin-right: 10px;
-            margin-top: 10px;
+            margin-right: 16px;
+            margin-top: 16px;
         }
 
         .tweet-box {
@@ -460,6 +484,7 @@
             margin-left: 10px; /* Space between text and icon */
             font-size: 0.1em; /* Adjust icon size as needed */
             color: #1da1f2; /* Same color as text */
+            margin-bottom: 0px;
         }
 
 
@@ -519,7 +544,7 @@
             margin-top: 18px;
             max-width: 1200px;
             width: 100%;
-            height: 715px;
+            height: 718px;
             position: relative;
             overflow: hidden;
             border-radius: 10px;
@@ -530,6 +555,7 @@
         .slides {
             display: flex;
             width: 100%;
+            height: 100%;
             transition: transform 0.5s ease-in-out;
         }
 
@@ -566,11 +592,11 @@
         /* Responsive Styles */
         @media (max-width: 768px) {
             .slider {
-                height: 500px; /* Adjust height for tablets and small screens */
+                height: 700px; /* Adjust height for tablets and small screens */
             }
 
             .slides img {
-                height: 500px; /* Adjust image height accordingly */
+                height: 700px; /* Adjust image height accordingly */
             }
 
             .navigation button {
@@ -581,11 +607,11 @@
 
         @media (max-width: 480px) {
             .slider {
-                height: 300px; /* Adjust height for smartphones */
+                height: 500px; /* Adjust height for smartphones */
             }
 
             .slides img {
-                height: 300px; /* Adjust image height accordingly */
+                height: 500px; /* Adjust image height accordingly */
             }
 
             .navigation button {
@@ -658,25 +684,32 @@
 
    <body class="w3-light-grey" data-scholarcy-content-script-executed="1">
       <div class="topnav">
-         <a class="active" id="sec1" href="#home">Home</a>
+       <div class="topnav-left">
          <a id="sec4" href="" style="color: white; text-decoration: none;">
-             <!-- Using a newspaper icon as an example -->
-             <svg xmlns="http://www.w3.org/2000/svg" width="26" height="27" viewBox="0 0 24 24">
-                 <path fill="white" d="M5 2v18h14v-2h-12v-16h-2zm13 15h-12v-12h12v12zm-6-3.5h-6v-1h6v1zm4-3h-10v-1h10v1zm0-3h-10v-1h10v1z"/>
-             </svg>
-         </a>
-         <a id="sec5" href="" style="color: white; text-decoration: none;">
-             <!-- Using a portfolio icon as an example -->
              <svg xmlns="http://www.w3.org/2000/svg" width="26" height="27" viewBox="0 0 24 24" style="fill: white;">
-                 <path d="M21 3h-18c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h18c1.1 0 2-.9 2-2v-14c0-1.1-.9-2-2-2zm-3 14h-12v-10h12v10zm-10-8h2v2h-2v-2zm4 0h2v2h-2v-2z"/>
+                 <path d="M10 20v-6h4v6h5v-8h3l-10-9-10 9h3v8z"/>
              </svg>
          </a>
-         <a id="sec3" href="" style="color: white; text-decoration: none;">
-             <!-- Using an airplane icon as an example -->
-             <svg xmlns="http://www.w3.org/2000/svg" width="26" height="27" viewBox="0 0 24 24" style="fill: white;">
-                 <path d="M13.5 10.5l-6-6-1.5 1.5 4.5 4.5-4.5 4.5 1.5 1.5 6-6v3h3v-6h-3v3z"/>
-             </svg>
-         </a>
+       </div>
+       <a id="sec4" href="" style="color: white; text-decoration: none;">
+           <!-- Using a bars icon -->
+           <svg xmlns="http://www.w3.org/2000/svg" width="26" height="27" viewBox="0 0 24 24">
+               <path fill="white" d="M3 12h18v2H3zm0-6h18v2H3zm0 12h18v2H3z"/>
+           </svg>
+       </a>
+       <a id="sec6" href="" style="color: white; text-decoration: none;">
+           <!-- Using a refresh icon -->
+           <svg xmlns="http://www.w3.org/2000/svg" width="26" height="27" viewBox="0 0 24 24" style="fill: white;">
+               <path d="M17.65 6.35a7.953 7.953 0 0 0-11.31 0c-3.11 3.11-3.11 8.19 0 11.31 3.11 3.11 8.19 3.11 11.31 0 2.33-2.33 2.87-5.79 1.36-8.65h-2.12c1.22 2.23 0.81 4.95-1.1 6.86-2.53 2.53-6.63 2.53-9.15 0s-2.53-6.63 0-9.15c1.71-1.71 4.22-2.19 6.42-1.33l-2.83 2.83h7.07v-7.07l-2.41 2.42z"/>
+           </svg>
+       </a>
+       <a id="sec7" href="" style="color: white; text-decoration: none;">
+           <!-- Using a search icon -->
+           <svg xmlns="http://www.w3.org/2000/svg" width="26" height="27" viewBox="0 0 24 24" style="fill: white;">
+               <path d="M19.279 17.874l-4.428-4.428a6.5 6.5 0 1 0-1.414 1.414l4.428 4.428a1 1 0 0 0 1.414-1.414zM5.5 10a4.5 4.5 0 1 1 9 0 4.5 4.5 0 0 1-9 0z"/>
+           </svg>
+       </a>
+
          <div class="topnav-right">
              <a href="https://www.github.com/AnuvabSen1">
                  <!-- Using a GitHub Octocat icon as an example -->
