--- a/index.html
+++ b/index.html
@@ -735,7 +735,7 @@
                   </div>
                   <div class="w3-container">
                      <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-blue"></i>Docter of Philosophy [PhD]</p>
-                     <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-blue"></i>Georgia Institute of Technology, USA</p>
+                     <p><i class="fa fa-building fa-fw w3-margin-right w3-large w3-text-blue"></i>Georgia Institute of Technology, USA</p>
                      <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-blue"></i>asen74@gatech.edu</p>
                      <p><i class="fab fa-linkedin fa-fw w3-margin-right w3-large w3-text-blue"></i><a href="https://www.linkedin.com/in/anuvabsen/">anuvabsen</a></p>
                      <p><i class="fa fa-graduation-cap fa-fw w3-margin-right w3-large w3-text-blue"></i><a href="https://scholar.google.com/citations?user=aQkZOqQAAAAJ&hl=en">Google Scholar</a></p>
