--- a/index.html
+++ b/index.html
@@ -769,13 +769,13 @@
 <div class = "profile">
                 <h2>About Me</h2>
  <p>
-     I am a first-year PhD student at Georgia Institute of Technology, Atlanta, USA, in the College of Electrical and Computer Engineering. I work as a Teaching Assistant at the Gigascale Reliable Energy-Efficient Nanosystem (GREEN) Lab. My current research areas of interest are related to artificial intelligence and energy-efficient design, with a focus on applications in smart machines that generate usable information from data. I am particularly interested in building energy-efficient models that operate under tight resource constraints.
+     I am a first-year PhD student at Georgia Institute of Technology, Atlanta, USA, in the College of Electrical and Computer Engineering. My current research areas of interest are related to artificial intelligence and energy-efficient design, with a focus on applications in smart machines that generate usable information from data. I am particularly interested in building energy-efficient models that operate under tight resource constraints.
  </p>
  <p>
      I graduated with a B.Tech. in Electronics and Telecommunication from IIEST Shibpur in 2024.
  </p>
  <p>
-     As an undergraduate, I engaged in diverse research experiences and received prestigious awards. I was awarded the Mitacs Globalink Research Scholarship to pursue an internship at McMaster University, where I implemented advanced machine learning models for load forecasting and optimized their performance using cognitive optimization techniques. Additionally, I received the DAAD WISE Scholarship to conduct research at the University of Bremen, focusing on NMR Quantum Computing and the optimization of quantum algorithms.
+     As an undergraduate, I engaged in diverse research experiences and received prestigious awards. I was awarded the Mitacs Globalink Research Scholarship to pursue an internship at McMaster University, where I implemented advanced machine learning models for load forecasting and optimized their performance using cognitive optimization techniques. Additionally, I have conducted research, focusing on NMR Quantum Computing and the optimization of quantum algorithms.
  </p>
  <p>
      I was advised by Prof. Subhamoy Maitra at the Indian Statistical Institute, where I worked on NMR Quantum Computing and the optimization of quantum algorithms. For my undergraduate thesis at IIEST, I worked closely collaborating with Dr. Subhabrata Roy. I primarily worked on the applications of attention mechanisms and explored areas like Alzheimer's diagnosis using SNNs and explored QMViTs too.
