--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
    <head>
       <link rel="icon" href="image/Anuvab Sen.png" type="image/icon type">
-      <title>Anuvab Sen</title>
+      <title>𝒜𝓃𝓊𝓋𝒶𝒷 𝒮𝑒𝓃</title>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="description" content="Anuvab Sen is a United States based Indian Author who primary domain of work is in Deep Learning and Multi-Objective Optimization. Sen is a 2xTEDx Speaker and author of multiple books and research articles. Sen received IEEE CIS Tr Award (2023), MITACS GRI Award (2023) and DAAD WISE Scholarship (2023).">
@@ -72,7 +72,7 @@
            width: 50%;
            height: 100%;
            }
-           
+
             .topnav svg {
                 vertical-align: middle;
                 transition: transform 0.3s ease-out; /* Animation for transform */
@@ -660,6 +660,80 @@
 
 
 
+        .waves1 {
+          display: flex;
+          background: #333;
+          justify-content: flex-end;
+          align-items: flex-end;
+        }
+
+        .footer {
+          position: relative;
+          width: 100%;
+          background: #279EFF;
+          min-height: 100px;
+          padding: 20px 50px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          flex-direction: column;
+        }
+
+        .social-icon,
+        .menu {
+          position: relative;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          margin: 10px 0;
+          flex-wrap: wrap;
+        }
+
+        .social-icon__item,
+        .menu__item {
+          list-style: none;
+        }
+
+        .social-icon__link {
+          font-size: 2rem;
+          color: #fff;
+          margin: 0 10px;
+          display: inline-block;
+          transition: 0.5s;
+        }
+        .social-icon__link:hover {
+          transform: translateY(-10px);
+        }
+
+        .menu__link {
+          font-size: 1.2rem;
+          color: #fff;
+          margin: 0 10px;
+          display: inline-block;
+          transition: 0.5s;
+          text-decoration: none;
+          opacity: 0.75;
+          font-weight: 300;
+        }
+
+        .menu__link:hover {
+          opacity: 1;
+        }
+
+        .footer p {
+          color: #fff;
+          margin: 15px 0 10px 0;
+          font-size: 1rem;
+          font-weight: 300;
+        }
+
+
+
+
+
+
+
+
 
 
 
@@ -726,7 +800,7 @@
             <!-- Left Column -->
             <div class="w3-third">
                <div class="w3-white w3-text-grey w3-card-4">
-                  <img src="image/Final.jpg" style="width:100%" alt="VB" loading="lazy">
+                 <img src="image/AS2.jpeg" style="width:100%; height:600px;" alt="VB" loading="lazy">
                   <div class="w3-display-container" id="sec1">
                      <div class="w3-display-bottomleft w3-container w3-text-black">
                      </div>
@@ -735,7 +809,7 @@
                   </div>
                   <div class="w3-container">
                      <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-blue"></i>Docter of Philosophy [PhD]</p>
-                     <p><i class="fa fa-building fa-fw w3-margin-right w3-large w3-text-blue"></i>Georgia Institute of Technology, USA</p>
+                     <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-blue"></i>Georgia Institute of Technology, USA</p>
                      <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-blue"></i>asen74@gatech.edu</p>
                      <p><i class="fab fa-linkedin fa-fw w3-margin-right w3-large w3-text-blue"></i><a href="https://www.linkedin.com/in/anuvabsen/">anuvabsen</a></p>
                      <p><i class="fa fa-graduation-cap fa-fw w3-margin-right w3-large w3-text-blue"></i><a href="https://scholar.google.com/citations?user=aQkZOqQAAAAJ&hl=en">Google Scholar</a></p>
@@ -775,7 +849,7 @@
      I graduated with a B.Tech. in Electronics and Telecommunication from IIEST Shibpur in 2024.
  </p>
  <p>
-     As an undergraduate, I engaged in diverse research experiences and received prestigious awards. I was awarded the Mitacs Globalink Research Scholarship to pursue an internship at McMaster University, where I implemented advanced machine learning models for load forecasting and optimized their performance using cognitive optimization techniques. Additionally, I have conducted research, focusing on NMR Quantum Computing and the optimization of quantum algorithms.
+     As an undergraduate, I engaged in diverse research experiences and received prestigious awards. I was awarded the Mitacs Globalink Research Scholarship to pursue an internship at McMaster University, where I implemented advanced machine learning models for load forecasting and optimized their performance using cognitive optimization techniques. Additionally, I conducted research at the University of Bremen, focusing on Quantum Machine Learning and Quamtum Statistics. Additionally I have received prestigious IEEE GRSS, IEEE CIS travel grants to present my research work in reputed conferences.
  </p>
  <p>
      I was advised by Prof. Subhamoy Maitra at the Indian Statistical Institute, where I worked on NMR Quantum Computing and the optimization of quantum algorithms. For my undergraduate thesis at IIEST, I worked closely collaborating with Dr. Subhabrata Roy. I primarily worked on the applications of attention mechanisms and explored areas like Alzheimer's diagnosis using SNNs and explored QMViTs too.
@@ -837,7 +911,7 @@
                            <a href="#"><i class="fa fa-download fa-fw w3-margin-right w3-text-blue"></i></a>
                        </div>
                        <div class="publication-item">
-                           <p class="publication-text">QGAPHnet: Quantum Genetic Algorithm Based Hybrid QLSTM Model for Soil Moisture Estimation, Geoscience and Remote Sensing Symposium [IGARSS 2024]. ysis Based Spiking Neural Network for Exoplanet Detection, Comm. Systems and Network Technologies Conf [CSNT], 802-807</p>
+                           <p class="publication-text">QGAPHnet: Quantum Genetic Algorithm Based Hybrid QLSTM Model for Soil Moisture Estimation, Geoscience and Remote Sensing Symposium [IGARSS 2024].</p>
                            <a href="#"><i class="fa fa-download fa-fw w3-margin-right w3-text-blue"></i></a>
                        </div>
                        <div class="publication-item">
@@ -889,7 +963,7 @@
                <div class="slider">
                    <div class="slides">
                        <img src="image/1.jpg" alt="Image 1">
-                       <img src="image/2.jpeg" alt="Image 2">
+                       <img src="image/iiest.jpg" alt="Image 2">
                        <img src="image/3.jpg" alt="Image 3">
                    </div>
                    <div class="navigation">
@@ -904,6 +978,9 @@
 
                         <br>
                       </div>
+
+
+
                       <div class="tweet-container">
                           <div class="tweet-box">
                               <blockquote class="twitter-tweet">
@@ -945,18 +1022,38 @@
       </div>
       <!-- End Page Container -->
 
-<footer class="w3-container w3-blue w3-center w3-margin-top">
-   <p>Copyright © Anuvab Sen 2024<br>If you would like to know more about my work, then drop me an email at <a href="">asen74@gatech.edu</a></p>
-</footer>
 
-
-
-<h2 class="stylish-headline">
-<p class="centered-icon"><i class="fab fa-twitter"></i></p>
-<p class="centered-icon"><i class="fab fa-linkedin"></i></p>
-<p class="centered-icon"><i class="fab fa-instagram"></i></p>
-<p class="centered-icon"><i class="fab fa-facebook"></i></p>
-</h2>
+<br>
+      <div class="waves1">
+        <footer class="footer">
+          <div class="waves">
+            <div class="wave" id="wave1"></div>
+            <div class="wave" id="wave2"></div>
+            <div class="wave" id="wave3"></div>
+            <div class="wave" id="wave4"></div>
+          </div>
+          <ul class="social-icon">
+            <li class="social-icon__item"><a class="social-icon__link" href="#">
+                <ion-icon name="logo-facebook"></ion-icon>
+              </a></li>
+            <li class="social-icon__item"><a class="social-icon__link" href="#">
+                <ion-icon name="logo-twitter"></ion-icon>
+              </a></li>
+            <li class="social-icon__item"><a class="social-icon__link" href="#">
+                <ion-icon name="logo-linkedin"></ion-icon>
+              </a></li>
+            <li class="social-icon__item"><a class="social-icon__link" href="#">
+                <ion-icon name="logo-instagram"></ion-icon>
+              </a></li>
+          </ul>
+          <ul class="menu">
+            <li class="menu__item"><a class="menu__link" href="#">If you would like to know more about my work, then drop me an email at <bold>(asen74@gatech.edu)</bold></a></li>
+          </ul>
+          <p>Copyright © Anuvab Sen 2024 | All Rights Reserved</p>
+        </footer>
+        <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+        <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+      </div>
 
 
 
