--- a/index.html
+++ b/index.html
@@ -223,6 +223,10 @@
               font-size: 14.5px;
           }
 
+         p1 {
+              font-size: 18.5px;
+          }
+
 
 
 
@@ -808,11 +812,11 @@
                      <h3 align="Center">Anuvab Sen</h3>
                   </div>
                   <div class="w3-container">
-                     <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-blue"></i>Docter of Philosophy [PhD]</p>
-                     <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-blue"></i>Georgia Institute of Technology, USA</p>
-                     <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-blue"></i>asen74@gatech.edu</p>
-                     <p><i class="fab fa-linkedin fa-fw w3-margin-right w3-large w3-text-blue"></i><a href="https://www.linkedin.com/in/anuvabsen/">anuvabsen</a></p>
-                     <p><i class="fa fa-graduation-cap fa-fw w3-margin-right w3-large w3-text-blue"></i><a href="https://scholar.google.com/citations?user=aQkZOqQAAAAJ&hl=en">Google Scholar</a></p>
+                     <p1><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-blue"></i>Docter of Philosophy [PhD]</p1>
+                     <p1><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-blue"></i>Georgia Institute of Technology, USA</p1>
+                     <p1><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-blue"></i>asen74@gatech.edu</p1>
+                     <p1><i class="fab fa-linkedin fa-fw w3-margin-right w3-large w3-text-blue"></i><a href="https://www.linkedin.com/in/anuvabsen/">anuvabsen</a></p1>
+                     <p1><i class="fa fa-graduation-cap fa-fw w3-margin-right w3-large w3-text-blue"></i><a href="https://scholar.google.com/citations?user=aQkZOqQAAAAJ&hl=en">Google Scholar</a></p1>
                      <hr>
                   </div>
                </div>
