--- a/index.html
+++ b/index.html
@@ -6,223 +6,8 @@
   <title>Anuvab Sen – Academic Portfolio</title>
   <!-- Google Fonts: Poppins for headings and Merriweather for body text -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&family=Merriweather:wght@300;400;700&display=swap" rel="stylesheet">
-  <style>
-    /* CSS Variables and Global Styles */
-    :root {
-      --primary-color: #2c3e50;
-      --accent-color: #f39c12;
-      --bg-color: #ffffff;
-      --text-color: #333333;
-      --section-bg: #f7f7f7;
-      --header-bg: rgba(44, 62, 80, 0.95);
-      --transition-speed: 0.3s;
-    }
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: 'Merriweather', serif;
-      background-color: var(--bg-color);
-      color: var(--text-color);
-      line-height: 1.6;
-    }
-    h1, h2, h3, h4, h5, h6 {
-      font-family: 'Poppins', sans-serif;
-      margin-bottom: 0.5em;
-    }
-    a {
-      text-decoration: none;
-      color: var(--accent-color);
-      transition: color var(--transition-speed);
-    }
-    a:hover {
-      color: var(--primary-color);
-    }
-    img {
-      max-width: 100%;
-      display: block;
-    }
-    /* Navigation Header */
-    header {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      background: var(--header-bg);
-      color: #fff;
-      z-index: 1000;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.2);
-    }
-    .nav-container {
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 15px 20px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-    }
-    .nav-logo {
-      font-size: 1.8em;
-      font-weight: 700;
-    }
-    .nav-menu {
-      display: flex;
-      gap: 25px;
-      align-items: center;
-    }
-    .nav-menu a {
-      font-size: 1em;
-      color: #fff;
-    }
-    .nav-toggle {
-      display: none;
-      font-size: 1.8em;
-      cursor: pointer;
-    }
-    /* Hero Section */
-    .hero {
-      height: 80vh;
-      background: url('image/hero-bg.jpg') center/cover no-repeat;
-      position: relative;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-      color: #fff;
-    }
-    .hero::after {
-      content: "";
-      position: absolute;
-      top: 0; left: 0; right: 0; bottom: 0;
-      background: rgba(44, 62, 80, 0.6);
-    }
-    .hero-content {
-      position: relative;
-      z-index: 2;
-    }
-    .hero-content h1 {
-      font-size: 3.5em;
-      margin-bottom: 0.2em;
-    }
-    .hero-content p {
-      font-size: 1.4em;
-    }
-    /* Section Styles */
-    section {
-      padding: 80px 20px;
-    }
-    .section-container {
-      max-width: 1200px;
-      margin: 0 auto;
-    }
-    .section-title {
-      text-align: center;
-      margin-bottom: 40px;
-      font-size: 2em;
-      position: relative;
-      padding-bottom: 10px;
-    }
-    .section-title::after {
-      content: "";
-      width: 60px;
-      height: 3px;
-      background: var(--accent-color);
-      position: absolute;
-      bottom: 0;
-      left: 50%;
-      transform: translateX(-50%);
-    }
-    /* About Section */
-    #about p {
-      max-width: 800px;
-      margin: 0 auto 20px auto;
-      text-align: center;
-      font-size: 1.1em;
-    }
-    /* Grid Layout for Work, CV, and News */
-    .grid {
-      display: grid;
-      gap: 30px;
-    }
-    /* For two-column layout on larger screens */
-    @media (min-width: 768px) {
-      .grid-2 {
-        grid-template-columns: 1fr 1fr;
-      }
-    }
-    /* Card Style */
-    .card {
-      background: #fff;
-      border-radius: 8px;
-      padding: 25px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-      transition: transform var(--transition-speed);
-    }
-    .card:hover {
-      transform: translateY(-5px);
-    }
-    .card h3 {
-      margin-top: 0;
-      color: var(--primary-color);
-    }
-    /* Contact Form */
-    .contact_form {
-      max-width: 600px;
-      margin: 0 auto;
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
-    }
-    .contact_form input,
-    .contact_form textarea {
-      padding: 12px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      font-size: 1em;
-      width: 100%;
-    }
-    .contact_form button {
-      background: var(--accent-color);
-      color: #fff;
-      border: none;
-      padding: 12px;
-      font-size: 1.1em;
-      border-radius: 5px;
-      cursor: pointer;
-      transition: background var(--transition-speed);
-    }
-    .contact_form button:hover {
-      background: var(--primary-color);
-    }
-    /* Footer */
-    footer {
-      background: var(--primary-color);
-      color: #fff;
-      text-align: center;
-      padding: 40px 20px;
-    }
-    footer p {
-      margin: 5px 0;
-    }
-    /* Responsive Mobile Menu */
-    @media (max-width: 768px) {
-      .nav-menu {
-        display: none;
-        flex-direction: column;
-        gap: 15px;
-        background: var(--header-bg);
-        position: absolute;
-        top: 60px;
-        left: 0;
-        width: 100%;
-        padding: 15px 0;
-      }
-      .nav-menu.active {
-        display: flex;
-      }
-      .nav-toggle {
-        display: block;
-      }
-    }
-  </style>
+  <!-- Link to external CSS file -->
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <!-- Header / Navigation -->
