--- a/index.html
+++ b/index.html
@@ -27,13 +27,16 @@
     </div>
   </header>
 
+
   <!-- Hero Section -->
-  <section class="hero" id="home">
-    <div class="hero-content">
-      <h1>Academic Portfolio</h1>
-      <p>Anuvab Sen – Researcher & PhD Student</p>
-    </div>
-  </section>
+<section class="hero" id="home">
+  <div class="hero-content">
+    <img src="Anuvab.png" alt="Anuvab Sen" class="hero-img" style="width:180px; height:180px; border-radius:50%; margin: 0 auto 20px auto;">
+    <h1>Academic Portfolio</h1>
+    <p>Anuvab Sen – Researcher & PhD Student</p>
+  </div>
+</section>
+
 
   <!-- About Section -->
   <section id="about">
