--- a/index.html
+++ b/index.html
@@ -268,8 +268,11 @@
     .slide {
       min-width: 100%;
     }
-    .slider img {
+    
+    .slide img {
       width: 100%;
+      height: 100%;
+      object-fit: cover; /* ensures image fills the box without distortion */
       display: block;
     }
     .slider-nav {
